--- a/.github/workflows/docsExample.yml
+++ b/.github/workflows/docsExample.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           version: 1.5
       - name: Install dependencies
-        run: julia --project=docs/
+        run: julia --project=Example/docs/
       - name: Build and deploy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # For authentication with GitHub Actions token
