--- a/.github/workflows/docsExample.yml
+++ b/.github/workflows/docsExample.yml
@@ -14,9 +14,9 @@ jobs:
         with:
           version: 1.5
       - name: Install dependencies
-        run: julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
+        run: julia --project=Example/docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
       - name: Build and deploy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # For authentication with GitHub Actions token
           DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }} # For authentication with SSH deploy key
-        run: julia --project=docs/ Example/docs/make.jl
+        run: julia --project=Example/docs/ Example/docs/make.jl
