--- a/.github/workflows/docsExampleA.yml
+++ b/.github/workflows/docsExampleA.yml
@@ -1,4 +1,4 @@
-name: Documentation
+name: docsExampleA
 
 on:
   push:
@@ -12,11 +12,11 @@ jobs:
       - uses: actions/checkout@v2
       - uses: julia-actions/setup-julia@latest
         with:
-          version: 1.5
+          version: 1.6
       - name: Install dependencies
         run: julia --project=Example/docs/ -e 'using Pkg; Pkg.instantiate()'
       - name: Build and deploy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # For authentication with GitHub Actions token
           DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }} # For authentication with SSH deploy key
-        run: julia --project=Example/docs/ Example/docs/make.jl
+        run: julia --project=ExampleA/docs/ ExampleA/docs/make.jl
