--- a/.github/workflows/docsExampleA.yml
+++ b/.github/workflows/docsExampleA.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           version: 1.6
       - name: Install dependencies
-        run: julia --project=Example/docs/ -e 'using Pkg; Pkg.add("Documenter"); Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
+        run: julia --project=Example/docs/ -e 'using Pkg; Pkg.add("Documenter"); Pkg.instantiate()'
       - name: Build and deploy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # For authentication with GitHub Actions token
