--- a/ExampleA/Project.toml
+++ b/ExampleA/Project.toml
@@ -2,3 +2,6 @@ name = "ExampleA"
 uuid = "8b5ba110-08e2-4255-b69b-8e24aa495c72"
 authors = ["jorgepz <jorgepz@fing.edu.uy>"]
 version = "0.1.0"
+
+[deps]
+Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
