--- a/.github/workflows/docsExampleA.yml
+++ b/.github/workflows/docsExampleA.yml
@@ -10,13 +10,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - working-directory: ExampleA
       - uses: julia-actions/setup-julia@latest
         with:
           version: 1.6
       - name: Install dependencies
-        run: julia --project=ExampleA/docs/ -e 'using Pkg; Pkg.add("Documenter"); Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
+        run: julia --project=docs/ -e 'using Pkg; Pkg.add("Documenter"); Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
       - name: Build and deploy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # For authentication with GitHub Actions token
           DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }} # For authentication with SSH deploy key
-        run: julia --project=ExampleA/docs/ ExampleA/docs/make.jl
+        run: julia --project=docs/ docs/make.jl
