--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "ExampleA"
+name = "Example"
 uuid = "8b5ba110-08e2-4255-b69b-8e24aa495c72"
 authors = ["jorgepz <jorgepz@fing.edu.uy>"]
 version = "0.1.0"
