--- a/.github/workflows/docsExamplePdf.yml
+++ b/.github/workflows/docsExamplePdf.yml
@@ -13,6 +13,8 @@ jobs:
       - uses: julia-actions/setup-julia@latest
         with:
           version: 1.6
+      - name: Install latex dependencies
+        run: sudo apt-get install texlive-most
       - name: Install dependencies
         run: julia --project=docs/ -e 'using Pkg; Pkg.add("Documenter"); Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
       - name: Build and deploy
