--- a/.github/workflows/docsExamplePdf.yml
+++ b/.github/workflows/docsExamplePdf.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           version: 1.6
       - name: Install latex dependencies
-        run: sudo apt-get install texlive-most
+        run: sudo apt-get install texlive-base texlive-fonts-extra
       - name: Install dependencies
         run: julia --project=docs/ -e 'using Pkg; Pkg.add("Documenter"); Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
       - name: Build and deploy
